2011-12-31  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/lst.c, libgputils/gpmemory.c, libgputils/gpmemory.h:
    properly count program memory usage: exclude config words for
    non-pic16 devices
  * gpasm/evaluate.c: untabification
  * gpasm/coff.c: don't emit undefined config words id they are outside
    the defined block; mask emitted config words with core_size. This
    probably fixes the bug #3373747: gpasm/gplink not working for
    pic16f88 since 0.13.5
  * gpasm/directive.c: removed unnecessary returns
  * gpasm/gpasm.c, doc/gputils.lyx:
    use the new Microchip COFF format by default
  * libgputils/gpprocessor.h, gpasm/directive.c, gpasm/parse.y,
    gpasm/lst.c, gpasm/processor.c, gpasm/evaluate.c, gpasm/coff.c:
    _16bit_core replaced by IS_16BIT_CORE
  * doc/gputils.lyx, gpasm/gperror.c, gpasm/gperror.h:
    updated errors, warnings and messages

2011-12-28  Borut Razem  <borutr@users.sourceforge.net>
  * include/stdhdr.h, gputils/gpvo.c, libgputils/gpcoff.h,
    libgputils/gpreadobj.c: gpvo shows additional info:
    COFF version, section header Virtual address
  * gputils/block.c: fixed warning: variable set but not used

2011-12-27  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/lst.c, gpasm/gpasm.c, gpasm/directive.c, gpasm/gperror.c,
    gpasm/gpasm.h: make listing more compatible with MPASM
  * gplink/script.c, gputils/gpvc.c, gputils/dump.c, gputils/block.c,
    libgputils/gpmemory.c, libgputils/gpcofflink.h:
    fixed warnings: variable set but not used
  * gpasm/parse.y: fixed identation

2011-12-24  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/parse.y, gpasm/gpasm.c, gpasm/gpasm.h, gpasm/directive.c,
    gpasm/scan.h, gpasm/scan.l:
    proper "end" line handling, include the "end" line in the asm listing

2011-12-18  Borut Razem  <borutr@users.sourceforge.net>
  * gpasm/gpasm.h, gpasm/directive.c, gpasm/special.c, libgputils/gpopcode.h: